可以通过筛选器筛选，代码页面可以不必显示所有无关级别提示

--- a/src/main/resources/i18n/Messages_en.properties
+++ b/src/main/resources/i18n/Messages_en.properties
@@ -36,6 +36,7 @@ com.yujunyang.intellij.plugin.sonar.action.analyze.currentFile=Analyze Current F
 com.yujunyang.intellij.plugin.sonar.toolWindow.report.emptyText=Start the analysis and then view the report
 com.yujunyang.intellij.plugin.sonar.toolWindow.report.preview.emptyText=Select an issue to preview
 com.yujunyang.intellij.plugin.sonar.toolWindow.report.issues.emptyText=Issues list is empty
+com.yujunyang.intellij.plugin.sonar.toolWindow.report.displayControl.severityTypeTitle=Severity
 com.yujunyang.intellij.plugin.sonar.toolWindow.report.displayControl.issueTypeTitle=Type
 com.yujunyang.intellij.plugin.sonar.toolWindow.report.displayControl.statusTitle=Resolution
 com.yujunyang.intellij.plugin.sonar.toolWindow.report.displayControl.status.resolved=Resolved
@@ -54,6 +55,7 @@ com.yujunyang.intellij.plugin.sonar.severityType.critical=Critical
 com.yujunyang.intellij.plugin.sonar.severityType.info=Info
 com.yujunyang.intellij.plugin.sonar.severityType.major=Major
 com.yujunyang.intellij.plugin.sonar.severityType.minor=Minor
+com.yujunyang.intellij.plugin.sonar.severityType.any=Any
 com.yujunyang.intellij.plugin.sonar.report.fileSummary={0} {1} issues
 com.yujunyang.intellij.plugin.sonar.lineMarker.lineSummary=Issues: {0}
 com.yujunyang.intellij.plugin.sonar.lineMarker.duplicationSummary=Lines[{0}-{1}] is duplicated with the other {2} code blocks
@@ -72,6 +74,7 @@ com.yujunyang.intellij.plugin.sonar.settings.dialog.sonarScannerProperty.edit.ti
 com.yujunyang.intellij.plugin.sonar.settings.project.connectionBindComboBoxLabel=SonarQube connection:
 com.yujunyang.intellij.plugin.sonar.settings.project.goBackButton=Configure the connection
 com.yujunyang.intellij.plugin.sonar.settings.project.checkboxLabel=Inherited SonarScanner properties from global settings
+com.yujunyang.intellij.plugin.sonar.settings.project.severityComboBoxLabel=Severity filter:
 com.yujunyang.intellij.plugin.sonar.error.dialog.sonarScannerProperty.name.unsupported=Property names [{0}] are not supported
 com.yujunyang.intellij.plugin.sonar.error.dialog.sonarScannerProperty.name.repeat=There is already a property with that name. Please choose another name
 com.yujunyang.intellij.plugin.sonar.error.dialog.sonarScannerProperty.name.invalid=The property name is invalid, it should start with 'sonar.'
@@ -88,6 +91,7 @@ com.yujunyang.intellij.plugin.sonar.analysis.report.copy.success=Copy report suc
 com.yujunyang.intellij.plugin.sonar.analysis.report.parse.start=Start parsing report
 com.yujunyang.intellij.plugin.sonar.analysis.report.parse.success=Parse report successfully
 com.yujunyang.intellij.plugin.sonar.analysis.report.parse.failed=Failed to parse report, {0}
+com.yujunyang.intellij.plugin.sonar.analysis.report.tips.prefix=found
 com.yujunyang.intellij.plugin.sonar.task.testConnection.title=Test connection to SonarQube
 com.yujunyang.intellij.plugin.sonar.task.testConnection.text=Connecting to server {0}
 com.yujunyang.intellij.plugin.sonar.task.analysis.title=Running Sonar analysis for project [{0}]
